packages/typ/tests/fixtures/diagnostics/0529_modules_manifest_type_mismatch_10.ml
module W : sig
  type t = bool
  val x : t
end = struct
  type t = int
  let x = 9
end
